# DRS-SYNC

./: .gitignore  API.md  ARCHITECTURE.md  CMakeLists.txt  DEMO_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TWO_PC_SETUP.md  cli.py  client_http.py  client_tcp.py  main.cpp  manifest_controller.cpp  reliable_packet.hpp  requirements.txt  server_http.py  server_tcp.py  setup.sh  udp_receiver.cpp  udp_receiver_reliable.cpp  udp_sender_reliable.cpp
backend/: __init__.py  api.py  chunk_manager.py  config.py  interface_scanner.py  network_simulator.py  receiver.py  server.py  transfer_engine.py
chunker/: CMakeLists.txt  test_chunker.cpp
chunker/core/: CMakeLists.txt
chunker/core/chunk/: Chunker.cpp  Chunker.hpp
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.css
frontend/src/components/: ControlPanel.css  ControlPanel.js  Dashboard.jsx  FileQueue.css  FileQueue.js  FileUploader.jsx  MetricsPanel.css  MetricsPanel.js  Speedometer.jsx  TelemetryPanel.jsx  TransferCanvas.css  TransferCanvas.js
frontend/src/services/: api.js  websocket.js
hash/: Hash.cpp  Hash.hpp  test_hash.cpp
include/drs_sync/: congestion_control.hpp  integrity.hpp  network_interface.hpp  packet.hpp  simple_checkpoint.hpp  transfer_engine.hpp
manifest/: CMakeLists.txt  test_manifest_basic.cpp
manifest/manifest/: Manifest.cpp  Manifest.hpp  ManifestManager.cpp  ManifestManager.hpp
meta-parsing/: CMakeLists.txt  reliable_packet.hpp  udp_receiver_reliable.cpp  udp_sender.cpp  udp_sender_reliable.cpp
meta-parsing(benchmarked)/: ping_controller.cpp  reliable_packet.hpp  udp_receiver_reliable.cpp  udp_sender_reliable.cpp
scripts/: demo.py  find_pc_ip.py  setup_receiver_pc.sh  setup_sender_pc.sh  start_demo.sh  start_server.py  start_two_clients.sh  test_two_clients.py  test_two_pc_transfer.py
selective repeat/: CMakeLists.txt  reliable_packet.hpp  udp_receiver_sr.cpp  udp_sender_sr.cpp
src/: api_server_light.cpp  api_server_mongoose.cpp  congestion_control.cpp  integrity.cpp  network_interface.cpp  simple_checkpoint.cpp  transfer_engine.cpp
uploads/: workspace-d28304b8-fc59-419c-83c5-47281deb9a88.tar
